// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Input  renders as expected 1`] = `
<div
  className="wt-dropdown wt-dropdown--normal mb-4 row mr-0 ml-0"
>
  <label
    htmlFor="Name"
  >
    Type
  </label>
  <div
    className="wt-dropdown__select col-12 p-0"
    id="Name"
  >
    <div
      className="wt-dropdown__select__value"
    >
      <div
        className="wt-dropdown__value"
      >
        -- Select --
      </div>
      <button
        className="wt-dropdown__select__button"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
  <div
    className="alert--disabled"
    role="alert"
  />
  <div
    className="wt-dropdown__comment"
  >
    No comment
  </div>
</div>
`;

exports[`Dropdown Input  renders with minimal config props 1`] = `
<div
  className="null null--normal mb-4 row mr-0 ml-0"
>
  <label
    htmlFor="Name"
  />
  <div
    className="null__select col-12 p-0"
    id="Name"
  >
    <div
      className="null__select__value"
    >
      <div
        className="null__value"
      />
      <button
        className="null__select__button"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
  <div
    className="alert--disabled"
    role="alert"
  />
</div>
`;
